--- a/content/03_Spring 生态/04_Spring AI/01_Spring AI Overview/Spring AI 简介.mdx
+++ b/content/03_Spring 生态/04_Spring AI/01_Spring AI Overview/Spring AI 简介.mdx
@@ -17,3 +17,13 @@ Spring AI 的定位就是：**它不是大模型，而是一个面向 Java 的 A
 
 ## 1. Spring AI 是什么（以及它不是什么）
 
+Spring AI 官方地址：
+
+<LinkCard href="https://spring.io/projects/spring-ai" />
+
+### 1.1 Spring AI 是什么
+
+Spring AI 提供一套相对统一的抽象 API，帮你在 Spring 应用中接入不同 AI 提供商的能力，并把常见的 AI 工程链路（RAG、向量库、工具调用、观测与评估）用更 “Spring” 的方式组织起来。
+
+官方项目页的核心描述是：把企业 **数据与 API** 连接到 **AI Models** 上。
+
